ヘッターのフッターの修正

--- a/company/index.html
+++ b/company/index.html
@@ -65,7 +65,11 @@
 </script>
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i&amp;display=swap" rel="stylesheet">
-<script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <link rel="stylesheet" href="../common/css/common.css">
 <script src="../common/js/page_common.js"></script>
 </head>
@@ -77,13 +81,13 @@
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
+<li><a href="../company/index.html">会社概要</a></li>
 <li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
-<li><a href="index.html">会社案内</a></li>
+<li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
-<li class="no_slash"><a href="../news/index.html">ニュース＆ブログ</a></li>
 <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
+
 <div id="sp_menu_close" class="sp_only">
 <a>CLOSE</a>
 </div>
@@ -117,28 +121,30 @@
 	<div data-pararax01>
 		<div class="container1300 company_intro_text">
 			<h4 class="f-yumincho" data-pararax01-opacity05="0.0">
-				大正5年創業以来、<br class="sp_only">一貫して官公庁発注の<br class="sp_only">社会資本整備事業を担い続け、<br> これからも地域社会の<br class="sp_only">成長に貢献し、<br class="pc_only">地域社会とともに<br class="sp_only">繁栄することを目指して<br class="sp_only">活動してまいります。
-			</h4>
+				お客様のご要望にお応えするスピードと行動力、<br class="pc_only"><br class="sp_only">そして何より誠実さに更なる磨きをかけ、<br class="pc_only"><br class="sp_only">地域の皆様に貢献できるよう、<br> これからも地域社会の<br class="sp_only">成長に貢献し、<br class="pc_only">地域社会とともに<br class="sp_only">繁栄することを目指して<br class="sp_only">活動してまいります。
+      </h4>
 		</div>
-		
+
 		<div class="messageArea">
-			<h2 class="title f-yumincho" data-pararax01-opacity05="0.2">代表メッセージ<span class="f-playfair">Top Message</span></h2>
+			<h2 class="title f-yumincho" data-pararax01-opacity05="0.2">代表紹介<span class="f-playfair">Top Message</span></h2>
 			<div class="group" data-pararax01-opacity03="0.4">
 				<div class="ph">
 					<img src="../img/company/message_img01.jpg" class="pc_only">
 					<img src="../img/company/message_img01_sp.jpg" class="sp_only">
 				</div>
 				<div class="content" data-pararax01-opacity07="0.4">
-					<p class="txt f-yumincho">株式会社山田組 代表取締役社長<span>山田 健一郎</span></p>
+					<p class="txt f-yumincho">BONDS property株式会社 代表取締役<span>間宮 俊之</span></p>
 				</div>
 			</div>
 			<div class="container1300" data-pararax01>
 				<div class="box" data-pararax01-opacity02="0.0">
 					<div class="box_text" >
 						<p class="txt">
-							　株式会社山田組は、大正5年、近代化に向けて開発が進められていた北海道で創業し、以来、現在まで一貫して総合建設事業に携わってまいりました。<br>
-							　常に変化する世の中にあっては、建設事業の在り方もまた例外ではなく、これからの建設企業は、地域社会に暮らす人々を災害から守り、安心して生活ができる社会資本を提供する「ものづくり企業」として成長していかなければならないのはもちろんのこと、世界に向けて魅力を発信する北海道を盛り上げるために地域社会に暮らす人々が持つ可能性を成果につなげる場を創り出す「ことづくり企業」へと進化していかなければなりません。<br>
-							　株式会社山田組は、これからも地域社会から信頼される企業であるべく、完全責任施工を第一に、全社一丸となって地域社会の発展に貢献し、ともに成長することを目指してまいります。
+              1982年生まれ。<br>
+大学卒業後、大手賃貸仲介会社へ入社。<br>
+約3年間の在職期間中に店長代理・店長を歴任後、よりオーナー様に寄り添った業務に携わる為、不動産管理会社にて約10年間、建物管理・賃貸管理業務に従事。<br>
+その後、ヘッドハンティングを受け、管理棟数100棟を超える不動産会社の管理部門執行役員に就任。<br>
+これまでの実績と経験を携えて、平成30年BONDS property株式会社の設立に至る。
 						</p>
 					</div>
 				</div>
@@ -149,9 +155,13 @@
 	<div class="philosophyArea">
 		<div class="container1100" data-pararax01>
 			<h2 class="title f-yumincho" data-pararax01-opacity05="0.0">企業理念<span class="f-playfair">Philosophy</span></h2>
-			<p class="txt f-yumincho" data-pararax01-opacity05="0.2">株式会社山田組は、未来に暮らす人々の幸福の礎を構築し、<br class="pc_only">
-				地域社会に潜在する可能性を成果につなげ、<br class="pc_only">
-			地域社会とともに全ての社員と全ての協力者が繁栄することを実現する</p>
+			<p class="txt f-yumincho" data-pararax01-opacity05="0.2">
+        私どもの会社では、オーナー様が所有する不動産への<br class="pc_only">
+        賃貸管理、建物管理はもちろんのこと<br class="pc_only">
+        メンテナンスやリフォームの提案<br class="pc_only">
+        また、地域の住まいと暮らしに合わせたサービス提供を通じて<br class="pc_only">
+			オーナー様・入居者様のベストパートナーとして<br class="pc_only">
+      業務を遂行することをお約束します。</p>
 		</div>
 	</div>
 
@@ -161,60 +171,63 @@
 			<div class="group" data-pararax01-opacity05="0.2">
 				<div class="left">
 					<div class="row f-yumincho">
-						<h3>商号</h3>
-						<p>株式会社山田組</p>
+						<h3>会社名</h3>
+						<p>BONDS property株式会社</p>
 					</div>
 					<div class="row f-yumincho">
 						<h3>代表者</h3>
-						<p>代表取締役社長　山田健一郎</p>
-					</div>
-					<div class="row f-yumincho">
-						<h3>創業</h3>
-						<p>大正5（1916）年5月10日</p>
-					</div>
-					<div class="row f-yumincho">
-						<h3>設立</h3>
-						<p>昭和22（1947）年5月23日</p>
+						<p>代表取締役　間宮　俊之</p>
 					</div>
 					<div class="row f-yumincho">
 						<h3>資本金</h3>
-						<p>1億円</p>
-					</div>
-					<div class="row f-yumincho">
-						<h3>登録</h3>
-						<p>北海道知事許可　特定建設業（特―1）石第18556号</p>
+						<p>500万円</p>
 					</div>
 					<div class="row f-yumincho">
 						<h3>業務</h3>
-						<p>土木工事業、建築工事業、とび・土工工事業、鋼構造物工事業、舗装工事業、しゅんせつ工事業、塗装工事業、防水工事業、造園工事業、水道施設工事業</p>
+						<p>不動産賃貸管理（Property Management)
+            <br>・リーシング業務
+            <br>・家賃管理業務
+            <br>・契約更新業務
+            <br>・解約清算業務
+            <br>・オーナー送金、報告業務
+            <br>不動産建物管理（Building Management）
+            <br>・建物設備定期検査
+            <br>・日常清掃・定期清掃業務
+            <br>・昇降機・電気設備・給排水設備・空調・貯水槽等附属設備検査
+            <br>・修繕・消防計画及び防災点検
+            <br>・トラブル緊急対応　　など
+            <br>メンテナンス/リフォーム
+            <br>建物修繕計画・ご提案、見積、施工
+            <br>リフォーム計画、ご提案見積、施工
+            </p>
 					</div>
 					<div class="row f-yumincho">
-						<h3>社員数</h3>
-						<p>60名</p>
+						<h3>電話番号</h3>
+						<p>052-251-0557</p>
 					</div>
 					<div class="row f-yumincho">
-						<h3>事業所</h3>
-						<p>北広島機材センター　北海道北広島市共栄539　TEL 011-376-6511</p>
+						<h3>FAX番号</h3>
+						<p>052-251-0558</p>
 					</div>
-					<div class="row f-yumincho">
+					<!-- <div class="row f-yumincho">
 						<h3>主要受注先</h3>
 						<p>北海道開発局、北海道、札幌市、独立行政法人鉄道建設・運輸施設整備支援機構（JRTT）（鉄道・運輸機構）、東日本高速道路株式会社（NEXCO東日本）
 						</p>
-					</div>
+					</div> -->
 				</div>
 				<div class="right">
 					<div class="img">
 						<img src="../img/company/overview_img.jpg" alt="" class="pc_only">
 						<img src="../img/company/overview_img_sp.jpg" alt="" class="sp_only"></div>
 						<p class="txt f-yumincho">
-							本社<br>北海道札幌市中央区<br>大通西１４丁目１番地 山田ビル
+							本社<br>愛知県名古屋市中区<br>大須３丁目８番１号　SHINBIビル3C
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
+<!--
 	<div class="historyArea">
 		<div class="container1100" data-pararax01>
 			<h2 class="title f-yumincho" data-pararax01-opacity05="0.0">沿革<span class="f-playfair">History</span></h2>
@@ -298,8 +311,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
+	</div> -->
+<!--
 	<div class="crsArea">
 		<div class="container1100" data-pararax01>
 			<h2 class="top f-yumincho" data-pararax01-opacity05="0.0">CSR<span>(社会貢献活動)</span></h2>
@@ -333,7 +346,7 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="linkArea">
 		<div class="container1100" data-pararax01>
@@ -391,24 +404,23 @@
 <div class="footer_left">
 <h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
 <address>
-<span>〒060-0042</span>
-北海道札幌市中央区大通西14丁目1番地 <br data-sc-sp>山田ビル
+<span>〒460-0011</span>
+愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
 </address>
 </div>
 
 <div class="footer_right">
 <ul>
-<li><a href="../index.html">TOP ページ</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
+  <li><a href="../index.html">TOP ページ</a></li>
+  <li><a href="index.html">会社概要</a></li>
+  <li><a href="../works/index.html">事業内容</a></li>
 </ul>
 <ul>
-<li><a href="index.html">会社案内</a></li>
-<li><a href="../recruit/index.html">採用情報</a></li>
-<li><a href="../news/index.html">ニュース＆ブログ</a></li>
+  <li><a href="../company/index.html">オーナー様へ</a></li>
+  <li><a href="../recruit/index.html">採用情報</a></li>
+  <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <ul>
-<li><a href="../contact/index.html">お問い合わせ</a></li>
 <li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
 </ul>
 </div>
@@ -419,7 +431,6 @@
 
 </footer>
 <!--/フッター-->
-
 <!--先頭に戻る-->
 <div id="back_to_top">
 <a></a>
