--- a/index.html
+++ b/index.html
@@ -255,9 +255,18 @@
             </div>
             <div class="container1100" data-pararax01>
                 <div class="recruit_text" data-pararax01-opacity02="0.0">
-                    <h4>未来の北海道が<br> あなたを待っている！
+                    <h4>未来の名古屋が<br> あなたを待っている！
                     </h4>
-                    <p>何もなかったところに、橋が架かり、道ができる。こんな大きなやりがいに心を動かされながら、私たちは100年以上にわたり、北海道を創り続けてきました。過去の実績を、未来へつなぐために。北の大地に新しい風景を描きたいという、気概ある挑戦を私たちは待っています。手がけた仕事は、あなたの「作品」となって次世代へ語りかけます。人々の暮らしを支え、幸せを創造するという誇りを胸に、ここから一緒に未知のフィールドを切り拓いていきましょう。</p>
+                    <p>不動産建物管理事業を安定的に行いながら、
+                      同時に不動産賃貸などいわゆる「安定的収益が期待できる事業」に注力し、
+                      事業収益力の強化を図ります。
+さらにリフォーム業やメンテナンス業にも注力し収益力の向上を図ります。
+これらを基本戦略として更なる安定と成長を目指しています。
+安定と成長は相反する目標と思われるかもしれませんが、
+それも地元に根ざした信頼があるからこそ可能な目標と言えるでしょう。<br>
+そんな未来図を描いている当社は、共に活躍する仲間を求めています。
+                      <!-- 何もなかったところに、橋が架かり、道ができる。こんな大きなやりがいに心を動かされながら、私たちは100年以上にわたり、北海道を創り続けてきました。過去の実績を、未来へつなぐために。北の大地に新しい風景を描きたいという、気概ある挑戦を私たちは待っています。手がけた仕事は、あなたの「作品」となって次世代へ語りかけます。人々の暮らしを支え、幸せを創造するという誇りを胸に、ここから一緒に未知のフィールドを切り拓いていきましょう。 -->
+                    </p>
                 </div>
                 <div class="recruit_photo" data-pararax01-opacity03="0.2"><img alt="" src="img/top_recruit_ph01.png"></div>
             </div>
@@ -278,20 +287,20 @@
         </section>
         <!--/採用情報-->
         <!--ニュース&ブログ-->
-        <section id="news" data-pararax01>
-            <div class="container1100" data-pararax01-opacity02="0.0">
+        <!-- <section id="news" data-pararax01>
+            <div class="container1100" data-pararax01-opacity02="0.0"> -->
                 <!--タイトル-->
-                <div class="news_ttl_box">
+                <!-- <div class="news_ttl_box">
                     <div class="section_ttl">
                         <h3>ニュース&amp;ブログ<span>News <em>&amp;</em> Blog</span></h3>
                     </div>
                     <div class="more_btn pc_only">
                         <a href="news/index.html">ニュース&amp;ブログ一覧</a>
                     </div>
-                </div>
+                </div> -->
                 <!--/タイトル-->
                 <!--一覧-->
-                <div class="news_list_wrapper">
+                <!-- <div class="news_list_wrapper">
                     <div class="news_list_box">
                         <a href="news/csr-2020-10-19/index.html">
                             <div class="news_list_photo"><img class="ofi" alt="" src="uploads/2020/10/20201014_-e1603159536812-1024x768.jpg"></div>
@@ -328,13 +337,13 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <!--/一覧-->
-                <div class="more_btn sp_only">
+                <!-- <div class="more_btn sp_only">
                     <a href="news/index.html">ニュース&amp;ブログ一覧</a>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--/ニュース&ブログ-->
     </main>
 
