--- a/recruit/index.html
+++ b/recruit/index.html
@@ -15,7 +15,7 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>採用情報 | 株式会社山田組</title>
+<title>採用情報</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/recruit83e0.css?update=20200217144716" rel="stylesheet">
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
@@ -23,7 +23,7 @@
 <link rel="canonical" href="index.html">
 <meta name="description" content="株式会社山田組の採用情報です。インフラ工事の着工から完成までを手がける大きな達成感を分かち合える仲間を求人募集しています。各種手当や休暇制度など福利厚生が充実。社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。">
 <meta name="robots" content="">
-<meta property="og:title" content="採用情報 | 株式会社山田組">
+<meta property="og:title" content="採用情報">
 <meta property="og:description" content="株式会社山田組の採用情報です。インフラ工事の着工から完成までを手がける大きな達成感を分かち合える仲間を求人募集しています。各種手当や休暇制度など福利厚生が充実。社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/recruit/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
@@ -66,6 +66,12 @@
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i&amp;display=swap" rel="stylesheet">
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 <link rel="stylesheet" href="../common/css/common.css">
 <script src="../common/js/page_common.js"></script>
 </head>
@@ -77,13 +83,13 @@
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
 <li><a href="../company/index.html">会社案内</a></li>
+<li><a href="../service/index.html">事業内容</a></li>
+<li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="index.html">採用情報</a></li>
-<li class="no_slash"><a href="../news/index.html">ニュース＆ブログ</a></li>
 <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
+
 <div id="sp_menu_close" class="sp_only">
 <a>CLOSE</a>
 </div>
@@ -360,24 +366,23 @@
 <div class="footer_left">
 <h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
 <address>
-<span>〒060-0042</span>
-北海道札幌市中央区大通西14丁目1番地 <br data-sc-sp>山田ビル
+  <span>〒460-0011</span>
+  愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
 </address>
 </div>
 
 <div class="footer_right">
 <ul>
-<li><a href="../index.html">TOP ページ</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
+  <li><a href="../index.html">TOP ページ</a></li>
+  <li><a href="../company/index.html">会社概要</a></li>
+  <li><a href="../service/index.html">事業内容</a></li>
 </ul>
 <ul>
-<li><a href="../company/index.html">会社案内</a></li>
-<li><a href="index.html">採用情報</a></li>
-<li><a href="../news/index.html">ニュース＆ブログ</a></li>
+  <li><a href="../works/index.html">オーナー様へ</a></li>
+  <li><a href="index.html">採用情報</a></li>
+  <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <ul>
-<li><a href="../contact/index.html">お問い合わせ</a></li>
 <li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
 </ul>
 </div>
