--- a/service/index.html
+++ b/service/index.html
@@ -15,7 +15,7 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>事業内容 | 株式会社山田組</title>
+<title>事業内容</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/topcd62.css?update=20201021124222" rel="stylesheet">
 <link href="../s_css/servicef606.css?update=20200217144717" rel="stylesheet">
@@ -24,7 +24,7 @@
 <link rel="canonical" href="index.html">
 <meta name="description" content="株式会社山田組の事業内容をご紹介。官公庁発注の公共土木工事を中心に、人々の暮らしと経済を支える公共事業を幅広く手がけ、「北海道新幹線」や「新千歳空港」などの大規模工事にも参画。また、災害時の復旧活動や社会貢献活動にも力を注いでいます。">
 <meta name="robots" content="">
-<meta property="og:title" content="事業内容 | 株式会社山田組">
+<meta property="og:title" content="事業内容">
 <meta property="og:description" content="株式会社山田組の事業内容をご紹介。官公庁発注の公共土木工事を中心に、人々の暮らしと経済を支える公共事業を幅広く手がけ、「北海道新幹線」や「新千歳空港」などの大規模工事にも参画。また、災害時の復旧活動や社会貢献活動にも力を注いでいます。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/service/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
@@ -67,6 +67,12 @@
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i&amp;display=swap" rel="stylesheet">
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 <link rel="stylesheet" href="../common/css/common.css">
 <script src="../common/js/page_common.js"></script>
 </head>
@@ -78,11 +84,10 @@
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
-<li><a href="index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
 <li><a href="../company/index.html">会社案内</a></li>
+<li><a href="index.html">事業内容</a></li>
+<li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
-<li class="no_slash"><a href="../news/index.html">ニュース＆ブログ</a></li>
 <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <div id="sp_menu_close" class="sp_only">
@@ -214,7 +219,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 
 <div class="service_works" data-pararax01>
@@ -280,24 +285,23 @@
 <div class="footer_left">
 <h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
 <address>
-<span>〒060-0042</span>
-北海道札幌市中央区大通西14丁目1番地 <br data-sc-sp>山田ビル
+<span>〒460-0011</span>
+愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
 </address>
 </div>
 
 <div class="footer_right">
 <ul>
-<li><a href="../index.html">TOP ページ</a></li>
-<li><a href="index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
+  <li><a href="../index.html">TOP ページ</a></li>
+  <li><a href="../company/index.html">会社概要</a></li>
+  <li><a href="index.html">事業内容</a></li>
 </ul>
 <ul>
-<li><a href="../company/index.html">会社案内</a></li>
-<li><a href="../recruit/index.html">採用情報</a></li>
-<li><a href="../news/index.html">ニュース＆ブログ</a></li>
+  <li><a href="../works/index.html">オーナー様へ</a></li>
+  <li><a href="../recruit/index.html">採用情報</a></li>
+  <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <ul>
-<li><a href="../contact/index.html">お問い合わせ</a></li>
 <li><a href="../privacy_policy/index.html">個人情報保護方針</a></li>
 </ul>
 </div>
@@ -308,7 +312,6 @@
 
 </footer>
 <!--/フッター-->
-
 <!--先頭に戻る-->
 <div id="back_to_top">
 <a></a>
