・メタタグ修正 ・ヘッターフッター修正

--- a/company/index.html
+++ b/company/index.html
@@ -15,17 +15,17 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>会社案内 | 株式会社山田組</title>
+<title>会社案内 | BONDS property株式会社</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/company1551.css?update=20200217144715" rel="stylesheet">
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link href="../s_css/topcd62.css?update=20201021124222" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<meta name="description" content="株式会社山田組の会社案内です。代表メッセージ、企業理念、会社概要、沿革、CSR(社会貢献活動)についてご案内しています。山田組は地域社会の成長に貢献し、地域社会とともに繁栄することを目指して活動しています。">
+<meta name="description" content="BONDS property株式会社の会社案内です。代表紹介、企業理念、会社概要、についてご案内しています。私どもの会社では、オーナー様が所有する不動産への賃貸管理、建物管理はもちろんのこと、メンテナンスやリフォームの提案、また、地域の住まいと暮らしに合わせたサービス提供を致します。">
 <meta name="robots" content="">
-<meta property="og:title" content="会社案内 | 株式会社山田組">
-<meta property="og:description" content="株式会社山田組の会社案内です。代表メッセージ、企業理念、会社概要、沿革、CSR(社会貢献活動)についてご案内しています。山田組は地域社会の成長に貢献し、地域社会とともに繁栄することを目指して活動しています。">
+<meta property="og:title" content="会社案内 | BONDS property株式会社">
+<meta property="og:description" content="BONDS property株式会社の会社案内です。代表紹介、企業理念、会社概要、についてご案内しています。私どもの会社では、オーナー様が所有する不動産への賃貸管理、建物管理はもちろんのこと、メンテナンスやリフォームの提案、また、地域の住まいと暮らしに合わせたサービス提供を致します。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/company/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
 <link href="../favicon.ico" rel="icon">
@@ -77,7 +77,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -402,7 +402,7 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
 <span>〒460-0011</span>
 愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
@@ -425,7 +425,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
 </div>
 
