--- a/contact/index.html
+++ b/contact/index.html
@@ -16,17 +16,17 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>お問い合わせ</title>
+<title>お問い合わせ ｜ BONDS property株式会社</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../common/css/common_kasou4c9c.css?update=20200217145454" rel="stylesheet">
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link href="../s_css/form1551.css?update=20200217144715" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<meta name="description" content="株式会社山田組に関するお問い合わせ、採用応募を承っております。メールまたは電話011-261-3521までお気軽にご相談ください。">
+<meta name="description" content="BONDS property株式会社に関するお問い合わせ、採用応募を承っております。メールまたは電話052-251-0557までお気軽にご相談ください。">
 <meta name="robots" content="">
-<meta property="og:title" content="お問い合わせ">
-<meta property="og:description" content="株式会社山田組に関するお問い合わせ、採用応募を承っております。メールまたは電話011-261-3521までお気軽にご相談ください。">
+<meta property="og:title" content="お問い合わせ | BONDS property株式会社">
+<meta property="og:description" content="BONDS property株式会社に関するお問い合わせ、採用応募を承っております。メールまたは電話052-251-0557までお気軽にご相談ください。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/contact/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
 <link href="../favicon.ico" rel="icon">
@@ -79,7 +79,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -295,7 +295,7 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
 <span>〒460-0011</span>
 愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
@@ -318,7 +318,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
 </div>
 <!--/フッター-->
