--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--ヘッダー-->
     <header>
         <h1>
-            <a href="index.html"><img class="chenge_img_logo" src="common/img/header_logo.png" alt="BONDS property株式会社"></a>
+            <a href="index.html"><img class="chenge_img_logo" src="common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a>
         </h1>
         <nav>
             <ul>
@@ -175,8 +175,6 @@
                       弊社では、失敗しないアパート・マンション経営を全面的にバックアップします。
                       名古屋ならではの問題点を熟知し、解決のための弊社独自の管理システムを採用しております。
                       オーナー様、入居者様の立場からマンション管理を常に徹底して心がけ、満足のいくサービスを提供してまいります。
-
-                      <!-- 官公庁発注の公共土木工事を中心に、土木・建築・塗装・造園など仕事内容は多岐にわたります。道内各地域の河川や道路、橋、トンネルなどのさまざまな建設事業・改良工事を担いながら、そこで暮らす人々の日常をより便利に、安全に支えるとともに、「北海道新幹線」の鉄道設備、新千歳空港の誘導路整備など、より多くの人たちに利用される事業にも関わっています。また、災害時の復旧活動や社会貢献活動にも力を注いでいます。 --></p>
                 </div>
                 <div class="service_works_photo" data-pararax01-opacity02="0.4"><img alt="" src="img/top_service_works_ph02.jpg"></div>
             </div>
@@ -260,12 +258,11 @@
                     <p>不動産建物管理事業を安定的に行いながら、
                       同時に不動産賃貸などいわゆる「安定的収益が期待できる事業」に注力し、
                       事業収益力の強化を図ります。
-さらにリフォーム業やメンテナンス業にも注力し収益力の向上を図ります。
-これらを基本戦略として更なる安定と成長を目指しています。
-安定と成長は相反する目標と思われるかもしれませんが、
-それも地元に根ざした信頼があるからこそ可能な目標と言えるでしょう。<br>
-そんな未来図を描いている当社は、共に活躍する仲間を求めています。
-                      <!-- 何もなかったところに、橋が架かり、道ができる。こんな大きなやりがいに心を動かされながら、私たちは100年以上にわたり、北海道を創り続けてきました。過去の実績を、未来へつなぐために。北の大地に新しい風景を描きたいという、気概ある挑戦を私たちは待っています。手がけた仕事は、あなたの「作品」となって次世代へ語りかけます。人々の暮らしを支え、幸せを創造するという誇りを胸に、ここから一緒に未知のフィールドを切り拓いていきましょう。 -->
+                      さらにリフォーム業やメンテナンス業にも注力し収益力の向上を図ります。
+                      これらを基本戦略として更なる安定と成長を目指しています。
+                      安定と成長は相反する目標と思われるかもしれませんが、
+                      それも地元に根ざした信頼があるからこそ可能な目標と言えるでしょう。<br>
+                      そんな未来図を描いている当社は、共に活躍する仲間を求めています。
                     </p>
                 </div>
                 <div class="recruit_photo" data-pararax01-opacity03="0.2"><img alt="" src="img/top_recruit_ph01.png"></div>
@@ -353,7 +350,7 @@
 
             <div class="footer_left">
                 <h2>
-                    <a href="index.html"><img src="common/img/footer_logo.png" alt="株式会社 山田組"></a>
+                    <a href="index.html"><img src="common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a>
                 </h2>
                 <address>
 <span>〒460-0011</span>
@@ -379,7 +376,7 @@
                 </ul>
             </div>
 
-            <p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+            <p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
         </div>
 
