--- a/service/index.html
+++ b/service/index.html
@@ -15,17 +15,17 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>事業内容</title>
+<title>事業内容 | BONDS property株式会社</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/topcd62.css?update=20201021124222" rel="stylesheet">
 <link href="../s_css/servicef606.css?update=20200217144717" rel="stylesheet">
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<meta name="description" content="株式会社山田組の事業内容をご紹介。官公庁発注の公共土木工事を中心に、人々の暮らしと経済を支える公共事業を幅広く手がけ、「北海道新幹線」や「新千歳空港」などの大規模工事にも参画。また、災害時の復旧活動や社会貢献活動にも力を注いでいます。">
+<meta name="description" content="BONDS property株式会社の事業内容をご紹介。地域密着の不動産管理で、住みやすく、人が集まりやすいまちづくりのお手伝いをし、オーナー様に寄り添ったご提案で、所有から活用への具体案を提示します。">
 <meta name="robots" content="">
-<meta property="og:title" content="事業内容">
-<meta property="og:description" content="株式会社山田組の事業内容をご紹介。官公庁発注の公共土木工事を中心に、人々の暮らしと経済を支える公共事業を幅広く手がけ、「北海道新幹線」や「新千歳空港」などの大規模工事にも参画。また、災害時の復旧活動や社会貢献活動にも力を注いでいます。">
+<meta property="og:title" content="事業内容 | BONDS property株式会社">
+<meta property="og:description" content="BONDS property株式会社の事業内容をご紹介。地域密着の不動産管理で、住みやすく、人が集まりやすいまちづくりのお手伝いをし、オーナー様に寄り添ったご提案で、所有から活用への具体案を提示します。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/service/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
 <link href="../favicon.ico" rel="icon">
@@ -80,7 +80,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -283,7 +283,7 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
 <span>〒460-0011</span>
 愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
@@ -306,7 +306,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
 </div>
 
