--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -15,17 +15,17 @@
 
   gtag('config', 'UA-156653780-1');
 </script>
-<title>個人情報保護方針 | 株式会社山田組</title>
+<title>個人情報保護方針 | BONDS property株式会社</title>
 <link href="../common/css/commona1d5.css?update=20201021125020" rel="stylesheet">
 <link href="../s_css/policy83e0.css?update=20200217144716" rel="stylesheet">
 <link href="../common/css/common_kasou4c9c.css?update=20200217145454" rel="stylesheet">
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<meta name="description" content="株式会社山田組の個人情報保護方針についてご案内します。">
+<meta name="description" content="BONDS property株式会社の個人情報保護方針についてご案内します。">
 <meta name="robots" content="">
-<meta property="og:title" content="個人情報保護方針 | 株式会社山田組">
-<meta property="og:description" content="株式会社山田組の個人情報保護方針についてご案内します。">
+<meta property="og:title" content="個人情報保護方針 | BONDS property株式会社">
+<meta property="og:description" content="BONDS property株式会社の個人情報保護方針についてご案内します。">
 <meta property="og:url" content="https://www.yamada-gumi.co.jp/privacy_policy/">
 <meta property="og:image" content="https://www.yamada-gumi.co.jp/common/img/og.png">
 <link href="../favicon.ico" rel="icon">
@@ -68,6 +68,10 @@
 
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i&amp;display=swap" rel="stylesheet">
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 <link rel="stylesheet" href="../common/css/common.css">
 <script src="../common/js/page_common.js"></script>
 </head>
@@ -75,15 +79,14 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
 <li><a href="../company/index.html">会社案内</a></li>
+<li><a href="../service/index.html">事業内容</a></li>
+<li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
-<li class="no_slash"><a href="../news/index.html">ニュース＆ブログ</a></li>
 <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <div id="sp_menu_close" class="sp_only">
@@ -182,31 +185,29 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="株式会社 山田組"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
-<span>〒060-0042</span>
-北海道札幌市中央区大通西14丁目1番地 <br data-sc-sp>山田ビル
+  <span>〒460-0011</span>
+  愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
 </address>
 </div>
 
 <div class="footer_right">
 <ul>
-<li><a href="../index.html">TOP ページ</a></li>
-<li><a href="../service/index.html">事業内容</a></li>
-<li><a href="../works/index.html">施工実績</a></li>
+  <li><a href="../index.html">TOP ページ</a></li>
+  <li><a href="../company/index.html">会社概要</a></li>
+  <li><a href="../service/index.html">事業内容</a></li>
 </ul>
 <ul>
-<li><a href="../company/index.html">会社案内</a></li>
-<li><a href="../recruit/index.html">採用情報</a></li>
-<li><a href="../news/index.html">ニュース＆ブログ</a></li>
+  <li><a href="../works/index.html">オーナー様へ</a></li>
+  <li><a href="../recruit/index.html">採用情報</a></li>
+  <li><a href="../contact/index.html">お問い合わせ</a></li>
 </ul>
 <ul>
-<li><a href="../contact/index.html">お問い合わせ</a></li>
 <li><a href="index.html">個人情報保護方針</a></li>
 </ul>
 </div>
-
-<p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
 </div>
 
