--- a/works/index.html
+++ b/works/index.html
@@ -81,7 +81,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -294,7 +294,7 @@
 
         <div class="footer_left">
             <h2>
-                <a href="index.html"><img src="common/img/footer_logo.png" alt="株式会社 山田組"></a>
+                <a href="index.html"><img src="common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a>
             </h2>
             <address>
 <span>〒460-0011</span>
@@ -320,7 +320,7 @@
             </ul>
         </div>
 
-        <p>Copyright &copy; Yamadagumi Co., Ltd. All rights reserved.</p>
+        <p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
 
     </div>
 
