--- a/works/works_cat/index.html
+++ b/works/works_cat/index.html
@@ -58,7 +58,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="/"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="株式会社 山田組"></a></h1>
+<h1><a href="/"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="株式会社 山田組"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="/">TOP</a></li>
