--- a/company/index.html
+++ b/company/index.html
@@ -77,7 +77,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="BONDS property株式会社"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -402,7 +402,7 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="BONDS property株式会社"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
 <span>〒460-0011</span>
 愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
