--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                 <div class="recruit_link_photo" data-pararax01-opacity02="0.0"><img alt="" src="img/top_recruit_ph02.jpg"></div>
                 <div class="recruit_link_text" data-pararax01-opacity03="0.2">
                     <h4><img alt="YAMADAGUMI RECRUIT" src="img/recruit_link_ttl.png"></h4>
-                    <p>人を大切にする<br class="sp_only"> 山田組の先輩たちの
-                        <br> 本音や仕事内容をご紹介
+                    <p>テキストテキスト<br class="sp_only">テキストテキスト
+                        <br>テキストテキスト
                     </p>
                     <div class="more_btn_white">
                         <a href="recruit/index.html">採用情報</a>
