大枠一回目提出

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -122,7 +122,7 @@
 <h3 class="f-yumincho">事業内容<span>recruit</span></h3>
 </div> -->
 
-<section class="container1300 recruit_intro" data-pararax01>
+<!-- <section class="container1300 recruit_intro" data-pararax01>
 	<div class="in">
 		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">100年以上、北海道を<br class="sp_br">創り続けてきた山田組は、<br>次の100年を一緒に切り拓いていく<br class="sp_br">仲間を求めています。<br>人のため、地域のため、<br class="sp_br">そしてあなた自身のために、<br class="sp_br">挑戦という舞台へ踏み出しましょう。</h3>
 		<img class="pc" src="../img/recruit/recruit_ph01.jpg" alt="" data-pararax01-opacity05="0.2">
@@ -145,7 +145,7 @@
 	</div>
 </section>
 
-<section class="recruit_outline" data-pararax01>
+<!-- <section class="recruit_outline" data-pararax01>
 	<div class="container1300">
 		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">業務内容</h3>
 		<p class="f-playfair" data-pararax01-opacity05="0.2">Business Outline</p>
@@ -159,9 +159,9 @@
 			<p class="recruit_outline_content_txt" data-pararax01-opacity02="0.8">当社は、建築・土木工事一式のプロジェクトリーダーとして、施工計画から工程・安全・品質などの管理、竣工検査まですべてのマネジメント業務を遂行するとともに、災害時の復旧活動や社会貢献活動にも取り組み、人々の安全で便利な暮らしを創造しています。</p>
 		</div>
 	</div>
-</section>
+</section> -->
 
-<section class="recruit_flow">
+<!-- <section class="recruit_flow">
 	<div class="container1100" data-pararax01>
 		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">仕事の流れ</h3>
 		<p class="f-playfair" data-pararax01-opacity05="0.2">Flow</p>
@@ -208,40 +208,9 @@
 			</li>
 		</ul>
 	</div>
-</section>
+</section> -->
 
-<section class="recruit_benefits">
-	<div class="container1300" data-pararax01>
-		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">福利厚生</h3>
-		<p class="f-playfair" data-pararax01-opacity05="0.2">Benefits</p>
-		<p data-pararax01-opacity05="0.4">現場での「週休２日」制度など働き方改革を積極的に進めて建設業界のこれまでのイメージを払拭し、<br class="pc_br">社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。</p>
-		<ul>
-			<li data-pararax01-opacity05="0.6">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon01.png" alt="">
-					<h4 class="f-yumincho">各種社会保険・退職金制度</h4>
-				</div>
-				<p>社会保険を完備するとともに必要な資格を有する場合の「技能手当」なども支給。社内退職金制度も導入しています。</p>
-			</li>
-			<li data-pararax01-opacity05="0.8">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon02.png" alt="">
-					<h4 class="f-yumincho">特別休暇制度</h4>
-				</div>
-				<p>年末年始休暇や有給休暇とは別に現場勤務終了時に特別休暇を取得できるなど働く意欲に応える制度づくりに努めています。</p>
-			</li>
-			<li data-pararax01-opacity05="1.0">
-				<div>
-					<img src="../img/recruit/recruit_benefits_icon03.png" alt="">
-					<h4 class="f-yumincho">社宅・独身寮完備</h4>
-				</div>
-				<p>希望者は江別市大麻の社宅（3LDK）、独身寮（ワンルーム）に入居できます。住宅手当・燃料手当も充実しています。</p>
-			</li>
-		</ul>
-	</div>
-</section>
-
-<section class="recruit_senior" data-pararax01>
+<!-- <section class="recruit_senior" data-pararax01>
 	<h3 class="f-yumincho" data-pararax01-opacity05="0.0">先輩からのメッセージ</h3>
 	<p class="f-playfair" data-pararax01-opacity05="0.2">Senior Message</p>
 	<p data-pararax01-opacity05="0.4">長い歴史を通して、先輩社員が後輩を親身に指導する社風がしっかりと根づいています。<br>技術力や知識を磨きながら、人としても大きく成長できる職場です。</p>
@@ -263,9 +232,9 @@
 			</div>
 		</li>
 	</ul>
-</section>
+</section> -->
 
-<section class="recruit_introduction">
+<!-- <section class="recruit_introduction">
 	<div class="container1100" data-pararax01>
 		<img class="ofi" src="../img/recruit/recruit_introduction.png" alt="">
 		<div data-pararax01-opacity05="0.2">
@@ -275,7 +244,7 @@
 			<a href="../news/index.html">ニュース＆ブログで更新中</a>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <section class="recruit_application">
 	<div class="container1100">
@@ -330,6 +299,36 @@
 	</div>
 </section>
 
+<section class="recruit_benefits">
+	<div class="container1300" data-pararax01>
+		<h3 class="f-yumincho" data-pararax01-opacity05="0.0">福利厚生</h3>
+		<p class="f-playfair" data-pararax01-opacity05="0.2">Benefits</p>
+		<p data-pararax01-opacity05="0.4">現場での「週休２日」制度など働き方改革を積極的に進めて建設業界のこれまでのイメージを払拭し、<br class="pc_br">社員みんなが楽しく安心して活躍できる環境づくりに取り組んでいます。</p>
+		<ul>
+			<li data-pararax01-opacity05="0.6">
+				<div>
+					<img src="../img/recruit/recruit_benefits_icon01_coppy.png" alt="">
+					<h4 class="f-yumincho">各種社会保険・退職金制度</h4>
+				</div>
+				<p>社会保険を完備するとともに必要な資格を有する場合の「技能手当」なども支給。社内退職金制度も導入しています。</p>
+			</li>
+			<li data-pararax01-opacity05="0.8">
+				<div>
+					<img src="../img/recruit/recruit_benefits_icon02_coppy.png" alt="">
+					<h4 class="f-yumincho">特別休暇制度</h4>
+				</div>
+				<p>年末年始休暇や有給休暇とは別に現場勤務終了時に特別休暇を取得できるなど働く意欲に応える制度づくりに努めています。</p>
+			</li>
+			<li data-pararax01-opacity05="1.0">
+				<div>
+					<img src="../img/recruit/recruit_benefits_icon03_coppy.png" alt="">
+					<h4 class="f-yumincho">社宅・独身寮完備</h4>
+				</div>
+				<p>希望者は江別市大麻の社宅（3LDK）、独身寮（ワンルーム）に入居できます。住宅手当・燃料手当も充実しています。</p>
+			</li>
+		</ul>
+	</div>
+</section>
 <section class="recruit_entry" data-pararax01>
 	<img class="sp" src="../img/recruit/recruit_bg.jpg" alt="" data-pararax01-opacity05="0.0">
 	<div class="box_center" data-pararax01-opacity05="0.0">
