--- a/service/index.html
+++ b/service/index.html
@@ -80,7 +80,7 @@
 
 <!--ヘッダー-->
 <header>
-<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/header_logo.png" alt="BONDS property株式会社"></a></h1>
+<h1><a href="../index.html"><img class="chenge_img_logo" src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h1>
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
@@ -126,59 +126,59 @@
 <div class="container1300 service_intro">
 	<div class="in" data-pararax01>
 		<div  data-pararax01-opacity05="0.0">
-			<h3 class="f-yumincho">山田組は“総合建設業”として<br>重要なインフラ工事を<br class="sp_only">主導しています。</h3>
+			<h3 class="f-yumincho">テキストテキストテキスト<br>テキストテキストテキスト<br class="sp_only">テキストテキストテキスト</h3>
 		</div>
 		<ul class="introList">
 			<li class="item" data-pararax01-opacity05="0.2">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img01.jpg" alt="河川" class="pc_only">
-						<img src="../img/service/intro_img01_sp.jpg" alt="河川" class="sp_only">
+            <img src="../img/service/intro_img01.jpg" alt="賃貸管理" class="pc_only">
+						<img src="../img/service/intro_img01_sp.jpg" alt="賃貸管理" class="sp_only">
 					</div>
-					<p class="number f-playfair">01</p>
+					<!-- <p class="number f-playfair">Rental management</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">河川</h4>
-					<p>災害に強く、安全・安心な暮らしを守るため、又、水と緑の空間としての潤いと安らぎをもたらすよう環境に配慮しながら、千歳川遊水地群の大規模河川工事などを手掛けています。</p>
+					<h4 class="f-yumincho">賃貸管理</h4>
+					<p>テキストテキストテキストテキストテキスト</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img02.jpg" alt="空港・港湾" class="pc_only">
-						<img src="../img/service/intro_img02_sp.jpg" alt="空港・港湾" class="sp_only">
+						<img src="../img/service/intro_img02.jpg" alt="建物管理" class="pc_only">
+						<img src="../img/service/intro_img02_sp.jpg" alt="建物管理" class="sp_only">
 					</div>
-					<p class="number f-playfair">02</p>
+					<!-- <p class="number f-playfair">02</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">空港・港湾</h4>
-					<p>北海道の空の玄関口である新千歳空港に関する工事を、開港前から長年にわたって手掛けています。又、東北海道の物流拠点である釧路港の国際バルク戦略港湾関係の工事なども手掛けています。 </p>
+					<h4 class="f-yumincho">建物管理</h4>
+					<p>テキストテキストテキストテキストテキスト</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.6">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img03.jpg" alt="道路" class="pc_only">
-						<img src="../img/service/intro_img03_sp.jpg" alt="道路" class="sp_only">
+						<img src="../img/service/intro_img03.jpg" alt="メンテナンス" class="pc_only">
+						<img src="../img/service/intro_img03_sp.jpg" alt="メンテナンス" class="sp_only">
 					</div>
-					<p class="number f-playfair">03</p>
+					<!-- <p class="number f-playfair">03</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">道路</h4>
-					<p>日常生活に欠かせない陸上交通施設である道路には、トンネル、橋などの構造物や通信、上下水道などのライフラインが含まれ、大切な公共の社会基盤を保つべく高速自動車道、一般国道、道道などの工事を手掛けています。</p>
+					<h4 class="f-yumincho">メンテナンス</h4>
+					<p>テキストテキストテキストテキストテキスト</p>
 				</div>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.8">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img04.jpg" alt="鉄道" class="pc_only">
-						<img src="../img/service/intro_img04_sp.jpg" alt="鉄道" class="sp_only">
+						<img src="../img/service/intro_img04.jpg" alt="リフォーム" class="pc_only">
+						<img src="../img/service/intro_img04_sp.jpg" alt="リフォーム" class="sp_only">
 					</div>
-					<p class="number f-playfair">04</p>
+					<!-- <p class="number f-playfair">04</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">鉄道</h4>
-					<p>暮らしの生命線であり、安全、確実で効率的な乗り物の鉄道工事、又、移動時間を大幅に短縮し、地域の産業や社会に大きな効果をもたらす北海道新幹線工事などを手掛けています。</p>
+					<h4 class="f-yumincho">リフォーム</h4>
+					<p>テキストテキストテキストテキストテキスト</p>
 				</div>
 			</li>
 		</ul>
@@ -190,32 +190,32 @@
 	<div class="container1300">
 		<div class="box" data-pararax01-opacity02="0.2">
 			<div class="box_text">
-				<p class="txt">総合建設業とは、工事受注から施工計画、準備・測量、工程・安全管理、工事、そして竣工検査までのすべてを取りまとめる建設会社のことです。建設業では、大工や左官などの専門工事業者や設計業者など多くの技術者が関わります。私たちは、そのプロジェクトリーダーである「現場監督」として、質の高い工事を計画的に、安全に進めるよう全力で取り組んでいます。</p>
-				<p class="comment">※大工工事、鉄筋工事、とび、土工などは「専門工事業者」といいます。</p>
+				<p class="txt">テキストテキストテキストテキストテキストテキストテキスト</p>
+				<p class="comment">テキストテキストテキストテキスト</p>
 			</div>
 		</div>
 		<ul class="listJob" data-pararax01>
 			<li class="item" data-pararax01-opacity05="0.0">
 				<p class="ph"><img src="../img/service/job_img01.jpg" alt="プロジェクト管理・進行"></p>
-				<h4 class="ttl f-yumincho">プロジェクト管理・進行</h4>
-				<p class="txt">工事受注後、最適な手順と方法を考えて施工計画を立案し、工事が始まった後は工期通りに円滑に工事を進めるよう日々確認や調整を繰り返し、工事全体を責任を持って牽引します。</p>
+				<h4 class="ttl f-yumincho">テキストテキスト</h4>
+				<p class="txt">テキストテキストテキストテキストテキスト</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
 				<p class="ph"><img src="../img/service/job_img02.jpg" alt="品質確保・チェック"></p>
-				<h4 class="ttl f-yumincho">品質確保・チェック</h4>
-				<p class="txt">施工計画に基づいて工事の品質が確保されているか、材料や施工方法などプロセスごとに担当技術者が丁寧に緻密に確認、チェックを行いながら、完成を目指します。</p>
+				<h4 class="ttl f-yumincho">テキストテキスト</h4>
+				<p class="txt">テキストテキストテキストテキストテキストテキスト</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
 				<p class="ph"><img src="../img/service/job_img03.jpg" alt="総合的なマネジメント"></p>
-				<h4 class="ttl f-yumincho">総合的なマネジメント</h4>
-				<p class="txt">各専門業者それぞれと折衝し、スケジュールや工程などを調整。現場で働く人たちの安全を確保するとともに、周辺の環境保全、地域住民への配慮など総合的なマネジメント業務を遂行しています。</p>
+				<h4 class="ttl f-yumincho">テキストテキスト</h4>
+				<p class="txt">テキストテキストテキストテキストテキストテキスト</p>
 			</li>
 		</ul>
 		<div class="technology" data-pararax01>
 			<div class="ph"><img src="../img/service/technology_img.png"></div>
 			<div class="l_right" data-pararax01-opacity03="0.0">
-				<h4 class="f-yumincho">常に進化・向上を目指し、<br>最新技術を取り入れています。</h4>
-				<p>通信衛星、ドローン、レーザースキャナーなどの情報通信技術や、ICT建設機械を工程の各段階で活用する新しい施工のシステムを取り入れて、生産性向上による施工の効率化に取り組んでいます。</p>
+				<h4 class="f-yumincho">テキストテキスト</h4>
+				<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			</div>
 		</div>
 	</div>
@@ -224,8 +224,8 @@
 
 <div class="service_works" data-pararax01>
 	<div class="box_center" data-pararax01-opacity05="0.0">
-		<h3 class="section_ttl f-yumincho">施工事例<br><span class="f-playfair">Works</span></h3>
-		<div class="more_btn_white"><a href="../works/index.html">施工事例一覧</a></div>
+		<h3 class="section_ttl f-yumincho">オーナー様へ<br><span class="f-playfair">To the owner</span></h3>
+		<div class="more_btn_white"><a href="../works/index.html">オーナー様へ</a></div>
 	</div>
 </div>
 
@@ -283,7 +283,7 @@
 <div class="container1100">
 
 <div class="footer_left">
-<h2><a href="../index.html"><img src="../common/img/footer_logo.png" alt="BONDS property株式会社"></a></h2>
+<h2><a href="../index.html"><img src="../common/img/BONDSproperty_logo.png" alt="BONDS property株式会社"></a></h2>
 <address>
 <span>〒460-0011</span>
 愛知県名古屋市中区大須3-8-1 <br data-sc-sp>SHINBIビル3C
