--- a/works/index.html
+++ b/works/index.html
@@ -115,8 +115,8 @@
 
 <!--page title-->
 <div class="page_title works_title">
-    <h2>施工実績</h2>
-    <p>works</p>
+    <h2>オーナー様へ</h2>
+    <p>To the owner</p>
 </div>
 <!--/page title-->
 
