--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class="vBorder"></div>
                     <div class="more_btn_white pc_only">
-                        <a href="works/index.html">施工実績一覧</a>
+                        <a href="works/index.html">オーナー様へ</a>
                     </div>
                 </div>
                 <!--/タイトル-->
