--- a/company/index.html
+++ b/company/index.html
@@ -126,7 +126,7 @@
 		</div>
 
 		<div class="messageArea">
-			<h2 class="title f-yumincho" data-pararax01-opacity05="0.2">代表紹介<span class="f-playfair">Top Message</span></h2>
+			<h2 class="title f-yumincho" data-pararax01-opacity05="0.2">代表紹介<span class="f-playfair">Representative introduction</span></h2>
 			<div class="group" data-pararax01-opacity03="0.4">
 				<div class="ph">
 					<img src="../img/company/message_img01.jpg" class="pc_only">
